// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`idRef creates a simple id ref 1`] = `
Object {
  "identifier": "foo",
}
`;

exports[`localIdRef creates a simple local id ref 1`] = `
Object {
  "localIdentifier": "foo",
}
`;

exports[`uriRef creates a simple URI ref 1`] = `
Object {
  "uri": "foo",
}
`;
